# oauth-api-rust

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: codeql.yml  rust.yml
scripts/http/: PasswordGrant.http
scripts/http/perform/: Introspection.http  PasswordGrant.http  Test.http
src/: graceful_shutdown.rs  main.rs
src/client/: authentication.rs  client_principal.rs  configuration.rs  middleware.rs  mod.rs  secret.rs
src/grant/: mod.rs
src/scope/: mod.rs  parser.rs
src/token/: mod.rs  repository.rs
src/token_exchange/: mod.rs  request.rs  response.rs  route.rs
src/token_exchange/grant/: authorization_code.rs  mod.rs  password.rs
src/token_introspection/: middleware.rs  mod.rs  route.rs
src/util/: disable_deserialization.rs  disable_serialization.rs  enum_with_from_str.rs  in_memory_repository.rs  map_of.rs  mod.rs  value_struct.rs
