[package]
name = "oauth-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
