[package]
name = "oauth-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[dev-dependencies]
assertables = "9.8.6"
base64 = "0.22.1"
http-body-util = "0.1.3"
serde_json = "1.0.149"
tower = "0.5.3"
